--- a/index.html
+++ b/index.html
@@ -39,40 +39,40 @@
         </div>
     </section>
 
-    <main class="flex flex-col justify-center items-center px-4 lg:px-[4rem] py-12 gap-12 lg:gap-24">
+    <main class="flex flex-col justify-center items-center px-4 lg:px-[4rem] py-12 5xl:py-52 gap-12 lg:gap-24 4xl:gap-52 ">
         <section class="flex flex-col justify-center items-center gap-4 lg:gap-8 xl:gap-16 xl:pt-10">
-            <h2 class="font-bold text-primary text-center text-xl lg:text-2xl xl:text-3xl 3xl:text-5xl 4xl:text-6xl lg:leading-normal xl:leading-[3rem] 3xl:leading-[4.3rem] 4xl:leading-[5.5rem] xl:px-32 3xl:px-[15rem] 4xl:px-[20rem]">Masih maju-mundur acara aqiqah anak karena alasan biaya? atau mungkin, 
+            <h2 class="font-bold text-primary text-center text-xl lg:text-2xl xl:text-3xl 3xl:text-5xl 4xl:text-6xl 5xl:text-7xl lg:leading-normal xl:leading-[3rem] 3xl:leading-[4.3rem] 4xl:leading-[5.5rem] 5xl:leading-[6.8rem] xl:px-32 3xl:px-[15rem] 4xl:px-[20rem] 5xl:px-[30rem]">Masih maju-mundur acara aqiqah anak karena alasan biaya? atau mungkin, 
                 Ayah Bunda takut jasa katering aqiqah tidak pengalaman menyembelih hewan sesuai syariat?
             </h2>
-            <img src="./images/men.png" alt="men thinking image" class="pr-10 3xl:w-[75rem] 4xl:[90rem]">
-            <p class="font-medium text-md xl:leading-normal 3xl:leading-[3.5rem] lg:text-lg xl:text-xl 3xl:text-4xl text-center xl:px-32 3xl:px-[15rem]">Jangan sampai rasa bingung dan kekhawatiran tersebut menghalangi kesempatan melaksanakan
+            <img src="./images/men.png" alt="men thinking image" class="pr-10 3xl:w-[75rem] 4xl:w-[100rem]">
+            <p class="font-medium text-md xl:leading-normal 3xl:leading-[3.5rem] 5xl:leading-[5.2rem] lg:text-lg xl:text-xl 3xl:text-4xl 5xl:text-6xl text-center xl:px-32 3xl:px-[15rem] 5xl:px-[35rem]">Jangan sampai rasa bingung dan kekhawatiran tersebut menghalangi kesempatan melaksanakan
                 ibadah sunnah yang membawa banyak keberkahan ini. Pelaksanaan aqiqah adalah bentuk rasa syukur kepada Allah SWT atas kelahiran
                 buah hati. Namun sering kali kita dihadapkan pada kendala seperti:
             </p>
             <div class="flex flex-col gap-4 3xl:gap-12 justify-center items-start 3xl:px-[15rem]">
                 <div class="flex flex-row gap-4 3xl:gap-8 items-center justify-center">
-                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-16">
-                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl">Takut hasil masakan kambing berbau prengus</p>
+                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-14 5xl:w-20">
+                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl 5xl:text-7xl">Takut hasil masakan kambing berbau prengus</p>
                 </div>
                 <div class="flex flex-row gap-4 3xl:gap-8 items-center justify-center">
-                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-16">
-                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl 3xl:leading-[4rem]">Ingin praktis, tapi takut harga yang murah malah mengorbankan kualitas</p>
+                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-16 5xl:w-20">
+                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl 5xl:text-7xl 3xl:leading-[4rem]">Ingin praktis, tapi takut harga yang murah malah mengorbankan kualitas</p>
                 </div>
                 <div class="flex flex-row gap-4 3xl:gap-8 items-center justify-center">
-                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-16">
-                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl">Ragu soal kehalalan proses penyembelihan</p>
+                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-14 5xl:w-20">
+                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl 5xl:text-7xl">Ragu soal kehalalan proses penyembelihan</p>
                 </div>
                 <div class="flex flex-row gap-4 3xl:gap-8 items-center justify-center">
-                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-16">
-                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl">Bingung mencari jasa katering akikah yang sesuai syariat</p>
+                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-14 5xl:w-20">
+                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl 5xl:text-7xl 3xl:leading-[4rem]">Bingung mencari jasa katering akikah yang sesuai syariat</p>
                 </div>
             </div>
         </section>
 
         <section class="flex flex-col justify-center items-center gap-4 lg:gap-8">
-            <h2 class="text-primary text-xl lg:text-2xl xl:text-3xl 3xl:text-5xl lg:leading-normal font-bold">Mari simak dulu video berikut!</h2>
-            <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
-            <div class="flex justify-center items-center w-screen">
+            <h2 class="text-primary text-xl lg:text-2xl xl:text-3xl 3xl:text-5xl 4xl:text-6xl 5xl:text-7xl lg:leading-normal font-bold">Mari simak dulu video berikut!</h2>
+            <div class="w-[4rem] h-[0.2rem] bg-primary 5xl:mt-[2m]"></div>
+            <div class="flex justify-center items-center w-screen 3xl:pt-12 5xl:pt-20">
                 <iframe class="w-full h-[16rem] md:h-96 lg:h-[32rem] xl:h-[40rem] 2xl:h-[48rem] 3xl:h-[56rem] 4xl:h-[64rem]"
                 src="https://www.youtube.com/embed/sJiwP7GUV_I?si=R0ZEn9kKQiqg1kfZ" 
                 title="YouTube video player" 
@@ -85,30 +85,30 @@
             <div class="relative gap-4 lg:gap-8 flex-col justify-center items-center -mt-[2rem] lg:-mt-[2rem] h-auto xl:pb-12">
                 <img src="./images/transparentredimage1.png" alt="transparent red image" class="absolute h-full w-full object-cover">
                 <div class="absolute bg-primary opacity-80 h-full w-full"></div>
-                <div class="relative flex flex-col gap-4 lg:gap-8 xl:gap-16 justify-center items-center text-white h-auto px-4 lg:px-0 py-12">
-                    <h2 class="font-medium text-md lg:text-lg xl:text-xl xl:pt-6">Kami Punya Solusinya Sekarang Juga!</h2>
-                    <p class="font-bold text-lg lg:text-xl xl:text-2xl text-center lg:px-32 xl:leading-[2rem]">Rasulullah Shallallahu 'Alaihi Wa Sallam bersabda: ”Setiap anak tergadai dengan aqiqahnya, maka pada hari ketujuh 
+                <div class="relative flex flex-col gap-4 lg:gap-8 xl:gap-16 4xl:gap-20 5xl:gap-32 justify-center items-center text-white h-auto px-4 lg:px-0 py-12 4xl:py-16">
+                    <h2 class="font-medium text-md lg:text-lg xl:text-xl 3xl:text-3xl 5xl:text-6xl xl:pt-6 5xl:pt-32">Kami Punya Solusinya Sekarang Juga!</h2>
+                    <p class="font-bold text-lg lg:text-xl xl:text-2xl 3xl:text-4xl 5xl:text-7xl text-center lg:px-32 3xl:px-[15rem] 5xl:px-[25rem] xl:leading-[2rem] 3xl:leading-[4rem] 5xl:leading-[6rem]">Rasulullah Shallallahu 'Alaihi Wa Sallam bersabda: ”Setiap anak tergadai dengan aqiqahnya, maka pada hari ketujuh 
                         disembelih hewan, dicukur habis rambutnya, dan diberi nama.” (HR. Abu Dawud no. 2838) <br> <br> Siap beraqiqah tapi tak 
                         mau repot masak sendiri? Tenang saja! Sekarang Ayah Bunda bisa melaksanakan Aqiqah sesuai Sunnah dengan harga mulai 
                         Rp 1,7 jutaan. Pilih jasa katering amanah, terpercaya, dan berpengalaman</p>
                     <div class="flex flex-col lg:flex-row lg:w-full h-auto gap-4 justify-center lg:justify-between items-center">
                         <div class="w-full h-auto">
-                            <img src="./images/imagefood1.png" alt="image food 1" class="rounded-lg object-cover">
+                            <img src="./images/imagefood1.png" alt="image food 1" class="rounded-lg object-cover w-full h-full">
                         </div>
                         <div class="w-full h-auto">
-                            <img src="./images/imagefood2.png" alt="image food 2" class="rounded-lg object-cover">
+                            <img src="./images/imagefood2.png" alt="image food 2" class="rounded-lg object-cover w-full h-full">
                         </div>
                         <div class="w-full h-auto">
-                            <img src="./images/imagefood3.png" alt="image food 3" class="rounded-lg object-cover">
+                            <img src="./images/imagefood3.png" alt="image food 3" class="rounded-lg object-cover w-full h-full">
                         </div> 
                     </div>
-                    <h2 class="font-bold text-white text-center text-lg lg:text-xl xl:text-2xl">100% Halal. Rasa Lezat. Harga Bersahabat <br>
+                    <h2 class="font-bold text-white text-center text-lg lg:text-xl xl:text-2xl 3xl:text-4xl 5xl:text-7xl 3xl:leading-[4rem] 5xl:leading-[6rem]">100% Halal. Rasa Lezat. Harga Bersahabat <br>
                         Barokah Aqiqah: Spesialis Aqiqah Kambing Jantan Sesuai Syari'at</i></A></h2>
-                    <p class="font-medium text-md lg:text-lg xl:text-2xl text-center text-white lg:px-32 xl:leading-[2rem]">Baroqah Aqiqah hadir untuk melengkapi kebahagiaan dan rasa syukur Ayah
+                    <p class="font-medium text-md lg:text-lg xl:text-2xl 3xl:text-4xl 5xl:text-7xl text-center text-white lg:px-32 5xl:px-[30rem] xl:leading-[2rem] 3xl:leading-[4rem] 5xl:leading-[6rem]">Baroqah Aqiqah hadir untuk melengkapi kebahagiaan dan rasa syukur Ayah
                         dan Bunda atas kelahiran si buah hati. Dengan pengalaman lebih dari 20 tahun, Barokah Aqiqah menawarkan jasa 
                         katering aqiqah spesialis kambing jantan yang memastikan ibadah aqiqah Anda berjalan dengan lebih afdhol, praktis, dan penuh berkah
                     </p>
-                    <button class="bg-secondary px-6 py-4 lg:pt-6 rounded-xl font-bold text-white text-lg shadow-2xl">
+                    <button class="bg-secondary px-6 2xl:px-12 5xl:px-24 py-4 lg:py-6 2xl:py-8 5xl:py-16 lg:pt-6 rounded-xl font-bold text-white text-lg 3xl:text-2xl 4xl:text-3xl 5xl:text-5xl shadow-2xl">
                         <a href="https://api.whatsapp.com/send/?phone=6282114144939&text=%5BGM-Kirim+Pesan+Ini+Sebagai+Bukti+Untuk+Mendapatkan+Promo+%26+Diskon+Yang+Berlaku+Bulan+Ini%5D+Assalamu%27alaikum.+Saya+Tertarik+Dengan+Promo+Diskon+nya.+Boleh+Tanya-tanya+dulu%3F&type=phone_number&app_absent=0">
                             Klik di sini untuk order paket aqiqah
                         </a>
@@ -121,7 +121,7 @@
             <h2 class="font-bold text-xl lg:text-2xl xl:text-3xl lg:leading-normal text-primary text-center">Kenapa Harus Baroqah Aqiqah? Ini Keistimewaan Kami</h2>
             <div class="w-[4rem] h-[0.2rem] bg-primary xl:-mt-[2rem]"></div>
             <img src="./images/logo.png" alt="logo baroqah aqiqah">
-            <div class="flex flex-wrap justify-center items-start gap-8 lg:gap-10 xl:gap-8 pt-4 bg-blue-500">
+            <div class="flex flex-wrap justify-center items-start gap-8 lg:gap-10 xl:gap-8 pt-4">
                 <div class="flex flex-col justify-start items-center gap-4 xl:h-auto xl:w-[20rem]">
                     <img src="./images/brain.png" alt="brain icon" class="w-16">
                     <h3 class="font-bold text-center lg:text-xl">Pengalaman Lebih dari 20 Tahun</h3>
