--- a/index.html
+++ b/index.html
@@ -118,67 +118,67 @@
         </section>
 
         <section class="flex flex-col justify-center items-center gap-4 lg:gap-8 xl:gap-16 lg:px-[4rem]">
-            <h2 class="font-bold text-xl lg:text-2xl xl:text-3xl lg:leading-normal text-primary text-center">Kenapa Harus Baroqah Aqiqah? Ini Keistimewaan Kami</h2>
+            <h2 class="font-bold text-xl lg:text-2xl xl:text-3xl 3xl:text-5xl lg:leading-normal text-primary text-center">Kenapa Harus Baroqah Aqiqah? Ini Keistimewaan Kami</h2>
             <div class="w-[4rem] h-[0.2rem] bg-primary xl:-mt-[2rem]"></div>
             <img src="./images/logo.png" alt="logo baroqah aqiqah">
             <div class="flex flex-wrap justify-center items-start gap-8 lg:gap-10 xl:gap-8 pt-4">
                 <div class="flex flex-col justify-start items-center gap-4 xl:h-auto xl:w-[20rem]">
                     <img src="./images/brain.png" alt="brain icon" class="w-16">
-                    <h3 class="font-bold text-center lg:text-xl">Pengalaman Lebih dari 20 Tahun</h3>
-                    <p class="font-normal text-center text-md lg:text-lg xl:pt-[1.9rem]">Sejak tahun 2000, Barokah Aqiqah telah menjadi pilihan keluarga dalam melaksanakan aqiqah yang sesuai sunnah. 
+                    <h3 class="font-bold text-center lg:text-xl 3xl:text-2xl">Pengalaman Lebih dari 20 Tahun</h3>
+                    <p class="font-normal text-center text-md lg:text-lg 3xl:text-xl xl:pt-[1.9rem] 3xl:pt-0">Sejak tahun 2000, Barokah Aqiqah telah menjadi pilihan keluarga dalam melaksanakan aqiqah yang sesuai sunnah. 
                         Pengalaman kami membuat setiap proses jadi lebih mudah, lancar, dan tanpa ribet 
                     </p>
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4 xl:h-auto xl:w-[20rem]">
                     <img src="./images/heart.png" alt="heart icon" class="w-16">
-                    <h3 class="font-bold text-center lg:text-xl">Hewan Sehat dan Cukup Umur Sesuai Syariat</h3>
-                    <p class="font-normal text-center text-md lg:text-lg">Nggak perlu ragu soal kualitas. Semua kambing yang kami sediakan 
+                    <h3 class="font-bold text-center lg:text-xl 3xl:text-2xl">Hewan Sehat dan Cukup Umur Sesuai Syariat</h3>
+                    <p class="font-normal text-center text-md lg:text-lg 3xl:text-xl 3xl:pt-[0.2rem]">Nggak perlu ragu soal kualitas. Semua kambing yang kami sediakan 
                         dijamin sehat, cukup umur, dan memenuhi syarat sah aqiqah. Kami spesialis dalam menyediakan kambing jantan 
                         sesuai sunnah, jadi ibadah aqiqah makin sempurna 
                     </p>
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4 xl:h-auto xl:w-[20rem]">
                     <img src="./images/box.png" alt="box icon" class="w-16">
-                    <h3 class="font-bold text-center lg:text-xl">Kemasan Menarik dan Rapih</h3>
-                    <p class="font-normal text-center text-md lg:text-lg xl:pt-[1.9rem]">Kami nggak cuma menyediakan jasa, tapi juga pengalaman. Dari 
+                    <h3 class="font-bold text-center lg:text-xl 3xl:text-2xl">Kemasan Menarik dan Rapih</h3>
+                    <p class="font-normal text-center text-md lg:text-lg 3xl:text-xl xl:pt-[1.9rem]">Kami nggak cuma menyediakan jasa, tapi juga pengalaman. Dari 
                         kemasan yang elegan hingga tambahan layanan seperti kartu ucapan eksklusif dan dokumentasi proses 
                         penyembelihan, semuanya dibuat agar hidangan aqiqah makin spesial 
                     </p>
                 </div>
                 <div class="flex flex-col justify-start items-center gap-4 xl:h-auto xl:w-[20rem]">
-                    <img src="./images/person.png" alt="person icon" class="w-16">
-                    <h3 class="font-bold text-center lg:text-xl">Saksikan Proses Penyembelihan</h3>
-                    <p class="font-normal text-center text-md lg:text-lg xl:pt-[1.8rem]">Buat Anda yang ingin memastikan semuanya berjalan sesuai syariat, 
+                    <img src="./images/person.png" alt="person icon" class="w-16 3xl:w-12">
+                    <h3 class="font-bold text-center lg:text-xl 3xl:text-2xl">Saksikan Proses Penyembelihan</h3>
+                    <p class="font-normal text-center text-md lg:text-lg 3xl:text-xl xl:pt-[1.8rem] 3xl:pt-0">Buat Anda yang ingin memastikan semuanya berjalan sesuai syariat, 
                         kami memberikan kesempatan untuk memilih kambing sendiri dan menyaksikan langsung proses penyembelihan. 
                         Transparansi adalah prioritas kami!
                     </p>
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4 xl:h-auto xl:w-[20rem] xl:pt-[1.4rem]">
                     <img src="./images/food.png" alt="food icon" class="w-16">
-                    <h3 class="font-bold text-center lg:text-xl">Masakan Lezat, Higienis dan Tidak Bau Prengus</h3>
-                    <p class="font-normal text-center text-md lg:text-lg">Suka khawatir kambing bakal bau prengus? Tenang, masakan kami diolah 
+                    <h3 class="font-bold text-center lg:text-xl 3xl:text-2xl">Masakan Lezat, Higienis dan Tidak Bau Prengus</h3>
+                    <p class="font-normal text-center text-md lg:text-lg 3xl:text-xl">Suka khawatir kambing bakal bau prengus? Tenang, masakan kami diolah 
                         dengan teknik khusus sehingga rasa enak, bebas bau, dan siap disantap tanpa masalah. Plus, pengemasannya rapi 
                         dan cocok untuk acara Anda
                     </p>
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4 xl:h-auto xl:w-[20rem] xl:pt-[2.3rem]">
                     <img src="./images/people.png" alt="people icon" class="w-16">
-                    <h3 class="font-bold text-center lg:text-xl">Tim Ahli dan Profesional</h3>
-                    <p class="font-normal text-center text-md lg:text-lg xl:pt-[1.9rem]">Mulai dari penyembelihan hingga pengolahan, semua dikerjakan oleh tim 
+                    <h3 class="font-bold text-center lg:text-xl 3xl:text-2xl">Tim Ahli dan Profesional</h3>
+                    <p class="font-normal text-center text-md lg:text-lg 3xl:text-xl xl:pt-[1.9rem]">Mulai dari penyembelihan hingga pengolahan, semua dikerjakan oleh tim 
                         yang berpengalaman dan terlatih. Kami tahu betul bagaimana memberikan yang terbaik untuk ibadah aqiqah Anda
                     </p>
                 </div>
-                <div class="flex flex-col justify-center items-center gap-4 xl:h-auto xl:w-[20rem]">
+                <div class="flex flex-col justify-center items-center gap-4 xl:h-auto xl:w-[20rem] 3xl:pt-[1.1rem]">
                     <img src="./images/wa.png" alt="wa icon" class="w-16">
-                    <h3 class="font-bold text-center lg:text-xl">Mudah Pesan Via Whatsapp</h3>
-                    <p class="font-normal text-center text-md lg:text-lg">Generasi sekarang pasti suka yang serba online. Tinggal klik, 
+                    <h3 class="font-bold text-center lg:text-xl 3xl:text-2xl">Mudah Pesan Via Whatsapp</h3>
+                    <p class="font-normal text-center text-md lg:text-lg 3xl:text-xl 3xl:pt-[1.8rem]">Generasi sekarang pasti suka yang serba online. Tinggal klik, 
                         konsultasi, dan pesan lewat Whatsapp semuanya mudah dan simpel
                     </p>
                 </div>
-                <div class="flex flex-col justify-center items-center gap-4 xl:h-auto xl:w-[20rem] xl:pt-[0.8rem]">
+                <div class="flex flex-col justify-center items-center gap-4 xl:h-auto xl:w-[20rem] xl:pt-[0.8rem] 3xl:pt-[2rem]">
                     <img src="./images/clock.png" alt="clock icon" class="w-16">
-                    <h3 class="font-bold text-center lg:text-xl">Bisa Pilih Waktu Penyembelihan</h3>
-                    <p class="font-normal text-center text-md lg:text-lg">Mau aqiqah di hari ke-7, 14, atau 21? Semua bisa! Kami fleksibel 
+                    <h3 class="font-bold text-center lg:text-xl 3xl:text-2xl">Bisa Pilih Waktu Penyembelihan</h3>
+                    <p class="font-normal text-center text-md lg:text-lg 3xl:xl 3xl:-pt-[1rem]">Mau aqiqah di hari ke-7, 14, atau 21? Semua bisa! Kami fleksibel 
                         menyesuaikan waktu agar aqiqah Anda lebih mudah dan lancar
                     </p>
                 </div>
@@ -186,23 +186,23 @@
         </section>
 
         <section class="flex flex-col justify-center items-center gap-4 lg:gap-8 xl:gap-16 lg:px-[4rem]">
-            <h2 class="font-bold text-xl lg:text-2xl xl:text-3xl lg:leading-normal text-primary text-center">Mengapa Kami Mengutamakan Kambing Jantan</h2>
+            <h2 class="font-bold text-xl lg:text-2xl xl:text-3xl 3xl:text-5xl lg:leading-normal text-primary text-center">Mengapa Kami Mengutamakan Kambing Jantan</h2>
             <div class="w-[4rem] h-[0.2rem] bg-primary xl:-mt-[2rem]"></div>
-            <img src="./images/goat.png" alt="goat image">
-            <h3 class="font-normal text-md lg:text-lg xl:text-xl text-center xl:px-[16rem]">Kambing jantan maupun betina keduanya tetap sah dan diperbolehkan, 
+            <img src="./images/goat.png" alt="goat image" class="w-[50rem]">
+            <h3 class="font-normal text-md lg:text-lg xl:text-xl 3xl:text-2xl text-center xl:px-[16rem] 3xl:px-[30rem]">Kambing jantan maupun betina keduanya tetap sah dan diperbolehkan, 
                 akan tetapi kambing jantan memiliki keutamaan:</h3>
             <div class="flex flex-col lg:flex-row justify-center items-center gap-4">
-                <div class="flex flex-col justify-center items-start gap-4 drop-shadow-2xl bg-gradient-to-t from-primary to bg-[#9A0006] p-4 xl:py-14 rounded-lg w-full h-auto">
-                    <h3 class="font-bold text-white text-lg lg:text-lg xl:text-2xl">LEBIH AFDHAL</h3>
-                    <p class="text-white font-normal lg:text-lg xl:text-xl xl:leading-[2rem]">Mengikuti sunnah Rasulullah Shallallahu Alaihi Wa Sallam</p>
+                <div class="flex flex-col justify-center items-start gap-4 drop-shadow-2xl bg-gradient-to-t from-primary to bg-[#9A0006] p-4 xl:py-14 3xl:px-14 rounded-lg w-full h-auto">
+                    <h3 class="font-bold text-white text-lg lg:text-lg xl:text-2xl 3xl:text-3xl">LEBIH AFDHAL</h3>
+                    <p class="text-white font-normal lg:text-lg xl:text-xl 3xl:text-2xl xl:leading-[2rem] 3xl:leading-[2.5rem]">Mengikuti sunnah Rasulullah Shallallahu Alaihi Wa Sallam</p>
                 </div>
                 <div class="flex flex-col justify-center items-start gap-4 drop-shadow-2xl bg-gradient-to-t from-primary to bg-[#9A0006] p-4 xl:py-14 rounded-lg w-full h-auto">
-                    <h3 class="font-bold text-white text-lg lg:text-lg xl:text-2xl">DAGING LEBIH BANYAK</h3>
-                    <p class="text-white font-normal lg:text-lg xl:text-xl xl:leading-[2rem]">Cocok untuk berbagi keberkahan kepada lebih banyak orang</p>
+                    <h3 class="font-bold text-white text-lg lg:text-lg xl:text-2xl 3xl:text-3xl">DAGING LEBIH BANYAK</h3>
+                    <p class="text-white font-normal lg:text-lg xl:text-xl 3xl:text-2xl xl:leading-[2rem] 3xl:leading-[2.5rem]">Cocok untuk berbagi keberkahan kepada lebih banyak orang</p>
                 </div>
                 <div class="flex flex-col justify-center items-start gap-4 drop-shadow-2xl bg-gradient-to-t from-primary to bg-[#9A0006] p-4 xl:py-14 rounded-lg w-full h-auto">
-                    <h3 class="font-bold text-white text-lg lg:text-lg xl:text-2xl">KUALITAS RAS</h3>
-                    <p class="text-white font-normal lg:text-lg xl:text-xl xl:leading-[2rem]">Fisik lebih gagah, daging lebih padat, dan rasa yang lebih nikmat</p>
+                    <h3 class="font-bold text-white text-lg lg:text-lg xl:text-2xl 3xl:text-3xl">KUALITAS RAS</h3>
+                    <p class="text-white font-normal lg:text-lg xl:text-xl 3xl:text-2xl xl:leading-[2rem] 3xl:leading-[2.5rem]">Fisik lebih gagah, daging lebih padat, dan rasa yang lebih nikmat</p>
                 </div>
             </div>
             <p class="font-normal text-md lg:text-lg xl:text-xl text-center italic xl:leading-[2rem]">“Telah menceritakan kepada kami [Muhammad bin Abdullah bin Numair] telah menceritakan kepada kami [Hafsh bin Ghiyast] 
